Javadoc for IO and models Folders